# scalanative-neovim-qt

./: .gitmodules  CMakeLists.txt  build.sbt
demo/src/main/scala/: Main.scala
src/main/scala/nvimqt/: NeovimConnector.scala  Shell.scala  ShellOptions.scala  ShellWidget.scala
